// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppError overview 0 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Dr. Eli Beatty
  </div>
</DocumentFragment>
`;

exports[`AppError overview 1 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Mr. Russell Volkman
  </div>
</DocumentFragment>
`;

exports[`AppError overview 2 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Dr. Zachary Kuphal
  </div>
</DocumentFragment>
`;

exports[`AppError overview 3 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Mrs. Freeda Nikolaus
  </div>
</DocumentFragment>
`;

exports[`AppError overview 4 snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

<div
    class="emotion-0"
  >
    Emilio Kozey
  </div>
</DocumentFragment>
`;
